# ElVis

./: CMakeLists.txt  README.md  RoadMap.md
include/: ElVis.h
include/Algorithm/: algorithm.h
include/Algorithm/Sorting/: bubble.h  heapsort.h  insertionsort.h  mergeSort.h  quicksort.h  radixsort.h  selectionsort.h  sorting.h
include/UI/: algorithms.h  mainmenu.h
include/Visualizer/: sortvis.h  visualizer.h
src/: ElVis.cpp  main.cpp  sort.cpp
src/algorithm/sorting/: Sorting.cpp  bubble.cpp  heapsort.cpp  insertionsort.cpp  mergeSort.cpp  quicksort.cpp  radixsort.cpp  selectionsort.cpp
src/sorting/: bubble.cpp
src/visualizer/: sortvis.cpp
